add media queries

--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <title>Lecture 13</title>
   </head>
   <body>
+    <header>
+      <img src="images/logo.svg" alt="" />
+      <nav>
+        <ul>
+          <a href="">მთავარი</a>
+          <a href="">სიახლეები</a>
+          <a href="">კონტაქტი</a>
+          <a href="">ჩვენს შესახებ</a>
+        </ul>
+      </nav>
+      <div class="burger-icon">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </header>
     <main>
       <div class="widget">
         <div class="bg-image">
